# 4BDAV-Sport-Social-Media-Architecture

./: README.md  docker-compose-dev.yaml  documentation_technique.md
cloudinary/: README.md
grafana/: Dockerfile  README.md
grafana/backup/: backup.sh
grafana/datasources/: datasource.yml
influxdb/: Dockerfile  README.md
influxdb/backup/: backup.sh
influxdb/config/: config.toml
influxdb/initdb/: token_creation.sh
marimo-dev/: Dockerfile  pyproject.toml  requirements.txt
marimo-dev/scripts/: develop_clients_api.py  generation_data.py
marimo-dev/scripts/data/: sensors_activities_data.txt
postgresql/: Dockerfile  README.md  create_bdd_social_media_sports.sql
postgresql/scripts/: create_bdd_social_media_sports.sql
postgresql/scripts/backup/: backup.sh
postgresql/scripts/config/: pg_hba.conf  postgresql.conf
postgresql/scripts/initdb/: create_bdd_social_media_sports.sql  create_role.sql
postgresql/scripts/inserts/: insert_bdd_dummy_data.sql
python-dev/: Dockerfile  pyproject.toml  requirements.txt
python-dev/scripts/: generation_data.py
python-dev/scripts/sensor_activity_influxdb/: generation_influxdb_data.py
python-dev/scripts/user_sport_sensor_sql/: generation_sql_data.py
redis/: Dockerfile  README.md
redis/backup/: backup.sh  dump.rdb
redis/backup/appendonlydir/: appendonly.aof.1.base.rdb
redis/config/: redis.conf  redis.conf.template
redis/entrypoint/: entrypoint.sh
worker_feed/: README.md
worker_insert_social_media/: README.md
worker_notif/: Dockerfile  README.md
worker_sensors_KPIs/: README.md  main.py
(+5 files in other folders)
